# OpenCV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  brightness.cpp  brightness.h  classify.cpp  classify.h  cmake_install.cmake  edge.cpp  edge.h  geometry.cpp  geometry.h  main.cpp  main.h  mask.cpp  mask.h  open_cv.h  practice.cpp  practice.h  project1.cpp  project2.cpp  storage.cpp  storage.h  video.cpp  video.h  video_ex.cpp  video_ex.h
